Wrap layout type switcher in ToolsPanel, fix styling of content and wide controls

--- a/packages/block-editor/src/hooks/layout.scss
+++ b/packages/block-editor/src/hooks/layout.scss
@@ -27,7 +27,7 @@
 .block-editor-hooks__layout-controls-helptext {
 	color: $gray-700;
 	font-size: $helptext-font-size;
-	margin-bottom: $grid-unit-20;
+	margin-bottom: 0;
 }
 
 .block-editor-hooks__flex-layout-justification-controls,
